Update game attempts and input types; enhance UI styling

--- a/src/index.html
+++ b/src/index.html
@@ -18,23 +18,23 @@
                 <li style="color: #fbbf24;">Yellow Color: Correct digit in the wrong position</li>
                 <li style="color: #f87171;">Red Color: Digit not present in the code</li>
             </ul>
-            But caution - Headquarters authorizes only eight chances before the mission is compromised.
+            <span>But caution - Headquarters authorizes only eight chances before the mission is compromised.
             Take your chances Agent. Do you have what it takes to crack the code?
-            Initiate the mission now.
+            Initiate the mission now.</span>
         </p>
     </section>
 
     <section id="main-game">
         <form id="input-form" readonly>
-            <input type="text" maxlength="1">
-            <input type="text" maxlength="1">
-            <input type="text" maxlength="1">
-            <input type="text" maxlength="1">
-            <input type="text" maxlength="1">
-            <input type="text" maxlength="1">
+            <input type="number" maxlength="1">
+            <input type="number" maxlength="1">
+            <input type="number" maxlength="1">
+            <input type="number" maxlength="1">
+            <input type="number" maxlength="1">
+            <input type="number" maxlength="1">
             <input type="submit" style="display: none;" >
         </form>
-        <span id="attempts">Attempts left: 8</span>
+        <span id="attempts">Attempts left: </span>
     </section>
     <section id="responses">
         
